# WP2IGstories

./: .gitignore  README.md  create_story.py  get_posts.py  get_posts_metadata.py  prepare_stories.py  pyproject.toml  requirements.txt  wp2canva.py
app/: __init__.py  app.py  canvas.py  j2_filters.py
app/models/: canvas.py  posts.py  story.py
app/routes/: auth.py  download.py  email.py  images.py  main.py  posts_data.py  recreate.py
app/static/css/: style.css
app/static/js/: feat_create_posts.js
app/templates/: index.html  login_modal.html  stories_email.html
app/utils/: canvas.py  create_stories.py  credentials.py  delete_stories.py  file_paths.py  get_posts_metadata.py  reorder_stories.py  stories_data.py
data/: template.yaml
data/ht/: template.yaml
data/pe/: template.yaml
src/: app.py  canvas.py  create_stories.py  create_story.py  delete_stories.py  file_paths.py  get_posts_metadata.py
src/static/: style.css  style.css.map  style.scss
src/static/css/: loading_circle.css  style.css
src/static/js/: feat_create_posts.js  loading_bar.js  process_stories.js  recreate_stories.js  req_create_posts.js
src/templates/: enter_email_modal.html  index.html  loading_modal.html  login.html  stories.html  stories_email.html
stories/ht/: stories.yaml
stories_maker/: file_paths.py
stories_maker/static/js/: process_stories.js
