[tool.poetry]
name = "stories-maker"
version = "1.2.0"
description = "Automated Instagram stories from WordPress posts solution"
authors = ["Patrik Albert <patrik.albert5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.6.0"
blinker = "1.5"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.2.0"
cleo = "2.1.0"
click = "8.1.3"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
envyaml = "1.10.211231"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
flask = "2.2.3"
flask-mail = "0.9.1"
flask-sqlalchemy = "3.0.3"
gevent = "23.9.1"
greenlet = "3.0.3"
gunicorn = "21.2.0"
idna = "3.4"
importlib-metadata = "7.0.1"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.3.0"
jinja2 = "3.1.2"
keyring = "24.3.0"
markupsafe = "2.1.2"
more-itertools = "10.2.0"
msgpack = "1.0.7"
numpy = "1.24.1"
packaging = "23.2"
pandas = "1.5.2"
pexpect = "4.9.0"
pillow = "10.1.0"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
ptyprocess = "0.7.0"
pyaml-env = "1.2.1"
pycparser = "2.21"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
pyproject-hooks = "1.0.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-json-logger = "2.0.7"
pytz = "2022.7.1"
pyyaml = "6.0.1"
rapidfuzz = "3.6.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
sphynx = "0.0.3"
sqlalchemy = "2.0.7"
structlog = "21.5.0"
tomlkit = "0.12.3"
trove-classifiers = "2024.1.8"
typing-extensions = "4.8.0"
urllib3 = "2.0.4"
virtualenv = "20.25.0"
werkzeug = "2.2.3"
xattr = "0.10.1"
zipp = "3.17.0"
zope-event = "5.0"
zope-interface = "6.1"
oauthlib = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
